# yoga-therapy-advisor

./: LICENSE  README.md  pyproject.toml
tests/: gpt-index-test.py  st-chat-example.py
yoga_therapy_advisor/: bot_main.py  gen_index.py  gen_index_via_gpt_index.py  main.py  query_index_via_gpt_index.py
yoga_therapy_advisor/logs/: log2.txt
yoga_therapy_advisor/tests/: chatGPT-custom-input-tool.py  custom-input-tool.py  repl-qa.py
